--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">parcial-1-am-acn4a-machado-augusto</string>
+    <string name="new_message">New Message</string>
 </resources>
