--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">parcial-1-am-acn4a-machado-augusto</string>
     <string name="new_message">New Message</string>
     <string name="todo">TODO</string>
+    <string name="my_calendar">My Calendar</string>
 </resources>
