--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">parcial-1-am-acn4a-machado-augusto</string>
-    <string name="new_message">New Message</string>
+    <string name="new_message">nueva tarea</string>
     <string name="todo">TODO</string>
     <string name="my_calendar">My Calendar</string>
 </resources>
