refactor - modificaciones en card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="new_message">nueva tarea</string>
     <string name="todo">TODO</string>
     <string name="my_calendar">My Calendar</string>
-    <string name="hoy">Hoy</string>
+    <string name="hoy">Mis tareas</string>
 </resources>
